-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8011308 | 8 | Unassigned | P4 | Resolved | Fixed | b84 |
The metaspace memory pools caused a lot of tests to fail due to three bugs (see linked issues). These bugs must be solved before the metaspace memory pools can be added.
Therefore, the change that introduced the metaspace memory pools must be reverted until these issues can be fixed.
Therefore, the change that introduced the metaspace memory pools must be reverted until these issues can be fixed.
- backported by
-
JDK-8011308 NPG: Remove metaspace memory pools
-
- Resolved
-
- relates to
-
JDK-8013590 NPG: Add a memory pool MXBean for Metaspace
-
- Resolved
-
-
JDK-8010719 NPG: The metaspace memory pools acquires Metaspace allocation lock out of order with Service_lock
-
- Closed
-
-
JDK-8010730 NPG: Bad assert in JVM_ENTRY(jobject, jmm_GetMemoryUsage(JNIEnv* env, jboolean heap))
-
- Closed
-
-
JDK-8010734 NPG: The test MemoryTest.java needs to be updated to support metaspace
-
- Closed
-