8010818: NPG: Remove metaspace memory pools

Reviewed-by: mgerdin, stefank