hotspot/src/share/vm/services/memoryManager.hpp
@@ -56,7 +56,6 @@ public:
   enum Name {
     Abstract,
     CodeCache,
-    Metaspace,
     Copy,
     MarkSweepCompact,
     ParNew,
@@ -89,7 +88,6 @@ public:
 
   // Static factory methods to get a memory manager of a specific type
   static MemoryManager*   get_code_cache_memory_manager();
-  static MemoryManager*   get_metaspace_memory_manager();
   static GCMemoryManager* get_copy_memory_manager();
   static GCMemoryManager* get_msc_memory_manager();
   static GCMemoryManager* get_parnew_memory_manager();
@@ -108,14 +106,6 @@ public:
 
   MemoryManager::Name kind() { return MemoryManager::CodeCache; }
   const char* name()         { return "CodeCacheManager"; }
-};
-
-class MetaspaceMemoryManager : public MemoryManager {
-public:
-  MetaspaceMemoryManager() : MemoryManager() {}
-
-  MemoryManager::Name kind() { return MemoryManager::Metaspace; }
-  const char *name()         { return "MetaspaceManager"; }
 };
 
 class GCStatInfo : public ResourceObj {
