hotspot/src/share/vm/services/memoryService.hpp
@@ -73,10 +73,6 @@ private:
   // Code heap memory pool
   static MemoryPool*                    _code_heap_pool;
 
-  // Metaspace pools
-  static MemoryPool*                    _metaspace_pool;
-  static MemoryPool*                    _class_metaspace_pool;
-
   static void add_generation_memory_pool(Generation* gen,
                                          MemoryManager* major_mgr,
                                          MemoryManager* minor_mgr);
@@ -125,7 +121,6 @@ private:
 public:
   static void set_universe_heap(CollectedHeap* heap);
   static void add_code_heap_memory_pool(CodeHeap* heap);
-  static void add_metaspace_memory_pools();
 
   static MemoryPool*    get_memory_pool(instanceHandle pool);
   static MemoryManager* get_memory_manager(instanceHandle mgr);
